# dune-opencl

./: README.md
dune-opencl/: CMakeLists.txt  config.h.cmake  dune-opencl.pc.in  dune.module
dune-opencl/build-cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  config_collected.h.cmake  dune-opencl-config.cmake  dune-opencl.pc
dune-opencl/build-cmake/cmake/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dune-opencl/build-cmake/cmake/pkg/: dune-opencl-config.cmake
dune-opencl/build-cmake/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dune-opencl/build-cmake/doc/doxygen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dune-opencl/build-cmake/dune/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dune-opencl/build-cmake/dune/opencl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dune-opencl/build-cmake/src/: CTestTestfile.cmake  Makefile  MatrixMultOpenCL  cmake_install.cmake
dune-opencl/cmake/modules/: CMakeLists.txt
dune-opencl/doc/doxygen/: Doxylocal
dune-opencl/dune/opencl/: CMakeLists.txt  opencl.hh
dune-opencl/src/: CMakeLists.txt  dune-opencl.cc  dune.cpp  kernels.cl
